src/backend/author/author-switcher/.helm/templates/author-switcher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-issuer
    kompose.cmd: kompose convert -f docker-compose.dev.yml -o ./.helm/templates
    kompose.service.expose: author-switcher.argiago.test
    kompose.service.expose.ingress-class-name: nginx
    kompose.service.expose.tls-secret: author-switcher-secret
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: author-switcher
  name: author-switcher
spec:
  ingressClassName: nginx
  rules:
    - host: author-switcher.argiago.test
      http:
        paths:
          - backend:
              service:
                name: author-switcher
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - author-switcher.argiago.test
      secretName: author-switcher-secret
status:
  loadBalancer: {}
